5089.	[bug]		Restore localhost fallback in dig and host which is
			used when no nameserver addresses present in
			/etc/resolv.conf are usable due to the requested
			address family restrictions. [GL #433]

5088.	[bug]		dig/host/nslookup could crash when interrupted close to
			a query timeout. [GL #599]

5087.	[test]		Check that result tables are complete. [GL #676]

5086.	[func]		Log of RPZ now includes the QTYPE and QCLASS. [GL #623]

5085.	[bug]		win32: Restore looking up nameservers, search list,
			etc. [GL #186]

5084.	[placeholder]

5083.	[func]		Add autoconf macro AX_POSIX_SHELL, so we
			can use POSIX-compatible shell features
			in the scripts.

5082.	[bug]		Fixed a race that could cause a crash in
			dig/host/nslookup. [GL #650]

5081.	[func]		Use per-worker queues in task manager, make task
			runners CPU-affine. [GL #659]

5080.	[func]		Improvements to "rndc nta" user interface:
			- catch and report invalid command line options
			- when removing an NTA from all views, do not
			  abort with an error if the NTA was not found
			  in one of the views
			- include the view name in "rndc nta -dump"
			  output, for consistency with the add and remove
			  actions
			Thanks to Tony Finch. [GL !816]

5079.	[func]		Disable IDN processing in dig and nslookup
			when not on a tty. [GL #653]

5078.	[cleanup]	Require python components to be explicitly disabled if
			python is not available on unix platforms. [GL #601]

5077.	[cleanup]	Remove ip6.int support (-i) from dig and mdig.
			[GL !969]

5076.	[bug]		"require-server-cookie" was not effective if
			"rate-limit" was configured. [GL #617]

5075.	[bug]		Refresh nameservers from cache when sending final
			query in qname minimization. [GL #16]

5074.	[cleanup]	Remove vector socket functions - isc_socket_recvv(),
			isc_socket_sendtov(), isc_socket_sendtov2(),
			isc_socket_sendv() - in order to simplify socket code.
			[GL #645]

5073.	[bug]		Destroy a task first when destroying rpzs and catzs.
			[GL #84]
