@@ -1,3 +1,7 @@
+5090.	[bug]		dig and mdig failed to properly preparse dash value
+			pairs when value was a seperate argument and started
+			with a dash. [GL #584]
+
 5089.	[bug]		Restore localhost fallback in dig and host which is
 			used when no nameserver addresses present in
 			/etc/resolv.conf are usable due to the requested
